--- a/trunk/src/eepskye/src/modeledit.ui
+++ b/trunk/src/eepskye/src/modeledit.ui
@@ -54,7 +54,7 @@
    <item row="0" column="0">
     <widget class="QTabWidget" name="tabWidget">
      <property name="currentIndex">
-      <number>0</number>
+      <number>10</number>
      </property>
      <widget class="QWidget" name="tabModelSetup">
       <attribute name="title">
@@ -10695,9 +10695,15 @@ Right</string>
          </item>
          <item row="2" column="1">
           <widget class="QSpinBox" name="BladesSpinBox">
+           <property name="minimumSize">
+            <size>
+             <width>60</width>
+             <height>0</height>
+            </size>
+           </property>
            <property name="maximumSize">
             <size>
-             <width>100</width>
+             <width>150</width>
              <height>16777215</height>
             </size>
            </property>
@@ -10705,7 +10711,7 @@ Right</string>
             <number>1</number>
            </property>
            <property name="maximum">
-            <number>49</number>
+            <number>150</number>
            </property>
           </widget>
          </item>
